Closed Bug 292400 Opened 21 years ago Closed 21 years ago

JS_VERSION 148 doesn't build

Categories

(Core :: JavaScript Engine, defect)

x86
Windows XP
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

Details

Attachments

(1 obsolete file)

cl -FoWINNT5.1_DBG.OBJ/ -c /MD /Od /Z7 -D_X86_=1 -DXP_WIN -DXP_WIN32 -DWIN32 -D_WINDOWS -D_WIN32 /nologo /W3 /FpWINNT5.1_DBG.OBJ/js.pch -DDEBUG -DDEBUG_timeless -DJS_VERSION=148 /Op -DEXPORT_JS_API jsinterp.c jsinterp.c jsinterp.c(5479) : error C2094: label 'do_JSOP_EXPORTNAME' was undefined cl -FoWINNT5.1_DBG.OBJ/ -c /MD /Od /Z7 -D_X86_=1 -DXP_WIN -DXP_WIN32 -DWIN32 -D_WINDOWS -D_WIN32 /nologo /W3 /FpWINNT5.1_DBG.OBJ/js.pch -DDEBUG -DDEBUG_timeless -DJS_VERSION=148 /Op -DEXPORT_JS_API jsopcode.c jsopcode.c jsopcode.c(2613) : error C2094: label 'do_JSOP_EXPORTNAME' was undefined jsopcode.c(1863) : warning C4102: 'do_getprop' : unreferenced label
Assignee: general → timeless
Status: NEW → ASSIGNED
Attachment #182220 - Flags: review?(brendan)
Depends on: 292398
Comment on attachment 182220 [details] [diff] [review] 1.48 specific changes to get the build happy (must be applied with changes for 1.4) Ditto (this one should have been rolled up with the last one). /be
Attachment #182220 - Flags: review?(brendan) → review+
Comment on attachment 182220 [details] [diff] [review] 1.48 specific changes to get the build happy (must be applied with changes for 1.4) this only affects build configurations which don't currently build. (these configurations are obviously not gecko.)
Attachment #182220 - Flags: approval1.8b3?
Flags: testcase-
Comment on attachment 182220 [details] [diff] [review] 1.48 specific changes to get the build happy (must be applied with changes for 1.4) a=asa
Attachment #182220 - Flags: approval1.8b3? → approval1.8b2+
Summary: JS_VERSION=148 doesn't build → JS_VERSION 148 doesn't build
Comment on attachment 182220 [details] [diff] [review] 1.48 specific changes to get the build happy (must be applied with changes for 1.4) 2005-05-06 14:42 mozilla/js/src/jsopcode.c 3.84 mozilla/js/src/jsinterp.c 3.174
Attachment #182220 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: