Bug 292400 JS_VERSION 148 doesn't build r=brendan a=asa